# j.ddadaal.me

./: .env  .gitignore  LICENSE  README.md
.github/workflows/: azure-kubernetes-service.yml  test-app.yml
backend/: Dockerfile
backend/migrations/2019-12-27-084744_create_posts/: down.sql  up.sql
backend/src/: main.rs
backend/src/db/: schema.rs
manifests/: deployment.yaml  service.yaml
migrations/2019-12-30-104216_init/: down.sql
service/: .env  Cargo.toml  README.md  diesel.toml
service/migrations/2019-12-30-104216_init/: up.sql
service/src/: main.rs
service/src/data/db/: models.rs  schema.rs
service/src/data/repositories/: jumps.rs  mod.rs  stats.rs
service/src/db/: models.rs  schema.rs
service/src/routes/: links.rs
src/data/repositories/: jumps.rs  stats.rs
src/routes/: mod.rs
