[package]
name = "j-ddadaal-me"
version = "0.1.0"
authors = ["Chen Junda <ddadaal@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
futures = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"]}
diesel = { version = "1.4.3", features = ["sqlite", "r2d2"]}
r2d2 = "0.8"
dotenv = "0.15.0"
tokio-diesel = "0.3.0"
chrono = "0.4"
env_logger = "0.7.1"
log = "0.4"